--- a/views/nuevanota.html
+++ b/views/nuevanota.html
@@ -9,13 +9,13 @@
     <form action="action/saveform.php" method="POST">
         
         <label>Ingrese el nombre</label>
-            <input type="text">
+            <input type="text" name="estudiante">
         <br>
         <label>Descripción</label>
-            <input type="text">
+            <input type="text" name="nameinput">
         <br>
         <label>Nota</label>
-            <input type="number">
+            <input type="number" name="nota">
         <br>
 
         <button type="submit">Enviar</button>
